迁移配方定义与机器同步数据 (#22)
* 添加虚拟线程加载结构逻辑

* 添加pattern分支，初步修改逻辑

* 添加CenterOffset 记录类

* spotless

* 优化加载逻辑

* 重构结构重载逻辑

* 多方块内部结构优化

* 优化部分结构

* 将 .java 重命名为 .kt

* 修复加载逻辑

* 调整热重载逻辑

* 添加缓存

* kt风格

* 切换到multiblock包

* 切换到cache构建多方块定义

* 清理代码

* spotless

* Refactor structure pattern reload into events

* Harden structure pattern reload edge cases

* Keep structure reload events internal

* Use async task pool for structure pattern reloads

* spotless

* Serialize structure predicates in json patterns

* Move structure predicates to multiblock api

* Cache multiblock patterns by source

* Update json multiblock definitions

* spotless

* 修复配方处理器空剩余项契约 (#20)

* 修复配方处理器剩余项契约

* 修复配方并行输出合并判断

* 修复结构谓词限制计数合并

* 迁移多方块结构为 JSON 模式 (#21)

* 支持结构模式多键缓存

* 支持多方块多结构模式

* 迁移结构谓词序列化定义

* 接入多方块 JSON 结构模式

* 添加多方块 JSON 结构定义

* datagen

* 迁移同步数据组件载荷

* 迁移配方定义与运行态分离

* 迁移展示数据组件载荷

* 恢复 Jade Provider 数据通道

* 迁移机器配方运行逻辑

* 补充配方定义迁移测试

* 迁移配置复制数据组件

* 格式化迁移代码

* 抽出机器工作态逻辑

* 迁移Jade工作态展示

* 迁移机器工作态调用

* 迁移扫描器工作态诊断

* 重命名监控数据同步包

* 迁移部件工作态联动

* 迁移机器显示工作态读取

* 收束工作态状态读取

* 迁移渲染诊断工作态读取

* 迁移末影频道列表数据序列化

* 迁移配方展示使用定义态

* 迁移机器保存字段数据组件化

* 禁止机器特性持有器NBT同步

* 迁移监控组保存载荷编码

* 迁移电站储能数据编码

* 迁移同步字段容器编码

* 迁移AE2配置复制组件

* 移除AE2槽位NBT序列化

* 移除AE2键存储NBT序列化

* 移除机器特性NBT同步入口

* 迁移同步保存组件边界

* 移除同步字段NBT编解码入口

* 移除NBT同步兜底编码

* 移除上下文字段NBT接口

* 迁移探矿缓存组件数据

* 移除配方内容NBT接口

* 迁移基岩矿脉保存组件边界

* 迁移危害区域保存组件边界

* 迁移医疗状态组件数据

* 迁移虚拟注册表组件数据

* 修正配方展示输出合并

* 迁移管网组件数据

* 迁移传输容器组件数据

* 迁移配方展示定义态来源

* 迁移AE2节点组件同步

* 迁移同步网络组件载荷

* 迁移传输组件通用同步

* 迁移虚拟注册表根组件

* 迁移披风注册表组件

* 修复同步空值组件编码

* 修复同步空值解析赋值

* 修复多方块匹配上下文污染

* 修复网络同步空值解析

* 修复配方处理器IO查询

* 修复网络空值同步解析

* 迁移AE2节点组件载荷

* 移除AE2节点NBT接口

* 迁移地图客户端缓存组件存储

* 覆盖网络空值组件传输

* 移除外观组件网络Codec封装

* 迁移测试结构模板同步数据

* 完善同步字段组件解析

* 修复装配线有序输入处理

* 修复多方块结构偏移检测

* 修复数据访问仓数据项接收

* 移除旧NBT配方测试

* 迁移配方处理器包边界

* 整理配方处理器导入顺序

* 补充配方内容映射序列化测试

* 完善组件存储边界测试

* 移除结构谓词NBT匹配

* 整理同步字段组件命名

* 完善配方失败原因展示

* 迁移研究数据访问边界

* 移除数据访问运行态配方依赖

* 迁移算力网络核心

* 接入算力端口机器

* 迁移研究站算力网络

* 移除方块状态配方能力

* 收敛数据访问配方边界

* 修复结构模板按需加载
